--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,10 +54,15 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    //Room Database
     def room_version = "2.4.1"
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
 
+    //PieGraph
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+
+    //Round Image
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
 }
